# AGENTIC-AI-

./: .gitignore  README.md
Agents_avec_Langchain/: agent.ipynb  main.py  pyproject.toml
Human-In-The-Loop/: README.md  agentHIT.ipynb  pyproject.toml
Lab_1_Ingenierie_des_prompts/: main.py  prompt.ipynb  pyproject.toml
MCP/: agentMCP.py  agentMCPTime.py  agentMCPTravel.py  pyproject.toml
Multi-Agents/: README.md  langgraph.json  multi-agent.py  pyproject.toml
Multi-Agents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
RAG/: pyproject.toml  rag.ipynb
agentlanggraph/: README.md  agent.py  langgraph.json  pyproject.toml  tools_setup.py
chef-personnel-agent/: agent.ipynb  main.py  pyproject.toml
context-agent/: agent.ipynb  main.py  pyproject.toml
langgraphbdcc/: README.md  conditional_workflow.py  hello_graph.py  langgraph.json  main.py  message_state.py  pyproject.toml  reducers_demo.py  two_step_workflow.py  workflow_loop.py
langgraphbdcc/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
rag-agent-for-laravel-doc/: .env.example  evaluation_results.json  main.py  pyproject.toml
rag-agent-for-laravel-doc/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
rag-agent-for-laravel-doc/data/chroma_db/ae155163-8d3d-4895-b75d-76164e2ae08a/: index_metadata.pickle
rag-agent-for-laravel-doc/data/raw/: artisan.md  authentication.md  authorization.md  blade.md  broadcasting.md  cache.md  collections.md  configuration.md  container.md  controllers.md  eloquent-relationships.md  eloquent-resources.md  eloquent.md  errors.md  events.md  facades.md  filesystem.md  mail.md  middleware.md  migrations.md  notifications.md  pagination.md  passport.md  providers.md  queues.md  requests.md  responses.md  routing.md  sanctum.md  scheduling.md  seeding.md  structure.md  testing.md  validation.md  views.md
rag-agent-for-laravel-doc/src/: chunking.py  exec_questions.py  graph.py  llm_config.py  scrape_laravel_docs.py  state.py  tools.py
