[project]
name = "lab-1-ingenierie-des-prompts"
version = "0.1.0"
description = "Prompt Engineering pour les systèmes multi agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "tiktoken>=0.13.0",
]
