[project]
name = "mcp_client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "tavily>=1.1.0",
]
