[project]
name = "multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph-cli[inmem]>=0.4.30",
]
