[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "pypdf>=6.13.3",
    "sentence-transformers>=5.6.0",
]
