[project]
name = "rag-agent-for-laravel-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
]
